--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,23 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     command: sh -c "docker pull rpdharanidhar/devops-task01:latest"
+version: '3.8'
+
+services:
+  myservice:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: rpdharanidhar/devops-task01:latest
+
+  push:
+    image: nginx
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: sh -c "docker push rpdharanidhar/devops-task01:latest"
+
+  pull:
+    image: nginx
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: sh -c "docker pull rpdharanidhar/devops-task01:latest"
