--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.18.3",
+    "kompose": "^0.0.1-alpha.1",
     "mongodb": "^4.17.2",
     "mongoose": "^8.2.2"
   },
