--- a/nodejs-app-deployment.yaml
+++ b/nodejs-app-deployment.yaml
@@ -16,11 +16,11 @@ spec:
     spec:
       containers:
         - name: nodejs-app
-          image: rpdharanidhar/devops-task02
+          image: rpdharanidhar/devops-task03
           ports:
             - containerPort: 3000
           env:
-            - name: MONGO_URI
+            - name: MONGO_URL
               value: mongodb://dharani:dharani@mongodb:27017/test
 
 
